--- a/Elaborato-2021.tex
+++ b/Elaborato-2021.tex
@@ -1,5 +1,5 @@
 \documentclass[12pt]{article}
-    \title{\textbf{Controllo automatico orientamento specchi forno solare}}
+    \title{\textbf{Controllo automatico orientamento\\ specchi forno solare}}
     \author{Scar. Francesco}
     \date{}
     \addtolength{\topmargin}{-2cm}
@@ -31,7 +31,6 @@
     \usepackage[T1]{fontenc}
     \usepackage{color}
     \usepackage{mwe}
-    \usepackage{listings}    
     \usepackage{etoolbox}
     \usepackage{amsmath}
     \usepackage{graphicx}
@@ -39,7 +38,10 @@
     \usepackage[hang,flushmargin]{footmisc}
     \usepackage{setspace}
     \usepackage[bottom=2.5cm]{geometry}
-    
+
+
+
+
     \renewcommand{\lstlistingname}{Codice}
 %    \renewcommand{\baselinestretch}{1.35}
 
@@ -51,7 +53,7 @@
 
 
     \lstset{
-      language = Octave,
+%      language = Octave,
       backgroundcolor=\color{white},   
       basicstyle=\footnotesize\ttfamily,       
       breakatwhitespace=false,         
@@ -83,7 +85,7 @@
 
     %% language specific settings:
     \lstdefinestyle{Arduino}{%
-        language = Octave,
+%        language = Octave,
         keywords=[1]{digitalRead, digitalWrite, micros, millis, delay, delayMicroseconds, pinMode, pow, sqrt, abs},
         keywords=[2]{if, else, while, for, do, return},%                 define keywords
         keywords=[3]{HIGH, OUTPUT, LOW, INPUT, true, false, void, int, long, unsigned, float, bool, char, uint8_t, uint18_t, int8_t, uint16_t},
@@ -106,7 +108,6 @@
 \setstretch{1.3}
 
 \newpage
-
 
 \section{Introduzione}
     \subsection{Descrizione}
@@ -135,8 +136,8 @@
     \caption{Schema a blocchi}
 \end{figure}
 
-I pin indicati a destra nel diagramma (GPIO25, GPIO32, GPIO33, GPIO13, GPIO12, GPIO14, GPIO19, GPIO18 e GPIO5) sono uscite, mentre i pin indicati a sinistra (GPIO23, GPIO0, GPIO15, GPIO2, GPIO4, GPIO25) sono input, unica eccezione il GPIO 22, che, come trattato in seguito nella sezione \ref{adns2610_protocol}, per la natura del protocollo seriale implementato dal sensore ADNS2610 richiede la possibilità di scambiare dati in modo bidirezionale. Tutti gli ingressi e le uscite utilizzate sono digitali, fatta eccezione del GPIO25 che è collegato internamente ad un ADC a 12 bit integrato nel ESP-32 (per cui non sono necessari ulteriori componenti esterni per effettuare la conversione).\\
-Tutti i componenti direttamente utilizzati dall'ESP-32 sono compatibili con la logica 0V - 3.3V del microcontrollore e hanno assorbimenti molto limitati (inferiori a pochi mA).\\
+I pin indicati a destra nel diagramma (GPIO25, GPIO32, GPIO33, GPIO13, GPIO12, GPIO14, GPIO19, GPIO18 e GPIO5) sono uscite, mentre i pin indicati a sinistra (GPIO23, GPIO0, GPIO15, GPIO2, GPIO4, GPIO27) sono input, unica eccezione il GPIO 22, che, come trattato in seguito nella sezione \ref{adns2610_protocol}, per la natura del protocollo seriale implementato dal sensore ADNS2610 richiede la possibilità di scambiare dati in modo bidirezionale. Tutti gli ingressi e le uscite utilizzate sono digitali, fatta eccezione del GPIO27 che è collegato internamente ad un ADC a 12 bit integrato nel ESP-32 (per cui non sono necessari ulteriori componenti esterni per effettuare la conversione).\\
+Tutti i componenti direttamente utilizzati dall'ESP-32 sono compatibili con la lo\-gi\-ca 0V - 3.3V del microcontrollore e hanno assorbimenti molto limitati (inferiori a pochi mA).\\
 
 Il modulo Wi-Fi è interno al chip dell'ESP-32 e dunque non richiede collegamenti con i pin esterni.
 
@@ -150,28 +151,28 @@ Si assumono i finecorsa collegati in pulldown e con uscita allo stato alto quand
 \end{figure}
 */
 
-Lo schema circutale completo è riportato di seguito.
+Lo schema circuitale completo è riportato di seguito.
 \begin{figure}[h]
 \centering
     \includegraphics[width=\textwidth]{Draws/Schematic.png}
     \caption{Schema circuitale}
 \end{figure}
 
-L'alimentazione del sistema può esse fornita da un pannello solare per rendere il dispositivo indipendente dalla rete elettica; la logica di controllo richiede una tensione di 5V, mentre i motori di 12V, per cui è stato necessario impiegare due regolatori di tensione LM2596. Essi sono convertitori step-down DC-DC regolabili, che permettono di ottenere in uscita una tensione inferiore a quella in ingresso in modo efficiente, limitando le dispersioni di calore.
+L'alimentazione del sistema può esse fornita da un pannello solare per rendere il dispositivo indipendente dalla rete elettrica; la logica di controllo richiede una tensione di 5V, mentre i motori di 12V, per cui è stato necessario impiegare due regolatori di tensione LM2596. Essi sono convertitori step-down DC-DC regolabili, che permettono di ottenere in uscita una tensione inferiore a quella in ingresso in modo efficiente, limitando le dispersioni di calore.
 
 
 \newpage
 
 \section{Descrizione componenti}
     \subsection{Microcontrollore}
-    Per la realizzazione di questo sistema di controllo è stato scelto di utilizzare un ESP-32, un microcontrollore a 32 bit con ingressi e uscite compatibili con la logica TTL.\\
-    Questo microcontrollore (come il suo predecessore ESP8266) è spesso impiegato in applicazioni IoT, anche in ambito professionale, per la connessione wifi (e bluetooth per quanto riguarda l'ESP-32) integrata in un unico chip a basso costo, permettendo ai diversi dispositivi di comunicare tra loro.\\
+    Per la realizzazione di questo sistema di controllo è stato scelto di utilizzare un ESP-32, un microcontrollore a 32 bit con uscite e ingressi, digitali e analogici.\\
+    Questo microcontrollore (come il suo predecessore ESP8266) è spesso impiegato in applicazioni IoT, anche in ambito professionale, per la connessione Wi-Fi (e Bluetooth per quanto riguarda l'ESP-32) integrata in un unico chip a basso costo, permettendo ai diversi dispositivi di comunicare tra loro.\\
     Per semplicità costruttiva di seguito ci si riferirà alla specifica implementazione me\-dian\-te la scheda di prototipazione rapida NodeMCU.
     
     \subsection{Motori}
-    Dovendo regolare con accuratezza la rotazione dei motori, per il controllo di azimuth e inclinazione, si è deciso di impiegare dei motori passo-passo, o stepper, in particolare il modello NEMA-17.\\
+    Dovendo regolare con accuratezza la rotazione dei motori, per il preciso controllo di azimut e inclinazione, si è deciso di impiegare dei motori passo-passo, noti anche come motori stepper, in particolare il modello NEMA-17.\\
     Questi attuatori sono motori ad impulsi, in quanto composti da bobine disposte in modo tale che, se eccitate in ordine opportuno, permettono di produrre una rotazione dell'asse inferiore a 1.8° per ogni step.\\
-    Il principio di funzionamento è schematizzato nell'immmagine seguente.\\
+    Il principio di funzionamento è schematizzato nell'immagine seguente.\\
     
     
     
@@ -185,8 +186,8 @@ L'alimentazione del sistema può esse fornita da un pannello solare per rendere 
     
     
         \subsubsection{Controllo di potenza}
-        Per il controllo dell'attivazione delle bobine si è scelto di utilizzare il modulo A4988 (molto diffuso nelle macchine a controllo numerico hobbistiche), che permette il controllo della rotazione del motore mediante un segnale di direzione (orario/antiorario) e un segnale di step.\\
-        La logica di attivazione degli avvolgimenti del motore è gestita dell'integrato mediante due ponti H a fet, uno per bobina, che permettono la regolazione della potenza ad ogni avvolgimento.\\
+        Per il controllo dell'attivazione delle bobine si è scelto di utilizzare il modulo A4988 (molto diffuso nelle macchine a controllo numerico amatoriali), che permette il controllo della rotazione del motore mediante un segnale di direzione (orario/antiorario) e un segnale di step.\\
+        La logica di attivazione degli avvolgimenti del motore è gestita dell'integrato mediante due ponti H a FET, uno per bobina, che permettono la regolazione della potenza ad ogni avvolgimento.\\
         Il funzionamento interno, come mostrato dal costruttore nel datasheet, può essere schematizzato con il seguente diagramma a blocchi.\\
         \begin{figure}[h]
         \centering
@@ -197,23 +198,23 @@ L'alimentazione del sistema può esse fornita da un pannello solare per rendere 
         
         \noindent
         Gli ingressi $MS_1$, $MS_2$ e $MS_3$ permettono la selezione del rapporto di microstepping, infatti oltre alla modalità full-step, in cui le singole bobine vengono eccitate con controllo ON-OFF in successione, è possibile realizzare un controllo micro-stepping con l'attivazione progressiva delle bobine consecutive, permettendo di mantenere il rotore tra due stati successivi, garantendo una maggiore fluidità di movimento, riducendo oscillazioni, vibrazioni e dunque sollecitazioni meccaniche della struttura fisica.\\
-        Con riferimento all'immagine di Fig. \ref{fig:A4988_diagram} si può osservare che il dispositivo permette di regolare la coppia massima del motore mediante la regolazione di una tensione di riferimento che agisce sulla corrente massima che viene fornita alle bobine (misurata dalle resistenze di shunt $R_{s1}$ e $R_{s2}$ che forniscono un feedback al sistema di controllo).
+        Con riferimento all'immagine di Fig. \ref{fig:A4988_diagram} si può osservare che il dispositivo permette di regolare la coppia massima del motore mediante la regolazione di una tensione di riferimento che agisce sulla corrente massima che viene fornita alle bobine (mi\-su\-ra\-ta dalle resistenze di shunt $R_{s1}$ e $R_{s2}$ che forniscono un feedback al sistema di controllo).
 
         \vspace{0.1cm}
 
 
     \subsection{Termocoppia}\label{thermocouple}
     Per la rilevazione della temperatura si è scelto di utilizzare una termocoppia di tipo K a giunzione Chromel-Alumel (leghe metalliche a base di nichel), sensore molto diffuso che premette di misurare temperature nel range da circa -200 °C a oltre 1300 °C, con una sensibilità di $41 \frac{\mu V}{\degree C}$.\\
-    Le termocoppie sfruttano l'effetto Seebeck, un effetto termoelettrico che produce una differenza di potenziale tra due punti di un materiale conduttore proporzionale alla differenza di temperatura tra i due punti (detti guinzione calda e giunzione fredda); l'intensità di questo effetto varia a seconda del materiale in considerazione e quindi, utilizzando due maetalli differenti, è possibile calcolare la temperatura del giunto caldo nota la differenza di potenziale e la temperatura del giunto freddo.\\
-    Per rendere apprezzabili tali variazioni di tensione è necessario impiegare un amplificatore da strumentazione, in particolare si è scelto l'AD595, che garantisce la compensazione interna della temperatura della giunzione fredda e fornisce in uscita una tensione proporzionale alla tempreatura secondo la relazione:
+    Le termocoppie sfruttano l'effetto Seebeck, un effetto termoelettrico che produce una differenza di potenziale tra due punti di un materiale conduttore proporzionale alla differenza di temperatura tra i due punti (detti giunzione calda e giunzione fredda); l'intensità di questo effetto varia a seconda del materiale in considerazione e quindi, utilizzando due metalli differenti, è possibile calcolare la temperatura del giunto caldo nota la differenza di potenziale e la temperatura del giunto freddo.\\
+    Per rendere apprezzabili tali variazioni di tensione è necessario impiegare un amplificatore per termocoppie (che permette di ottenere un errore minore rispetto alla realizzazione della componente amplificatrice con componenti discreti di media qualità), in particolare si è scelto l'AD595, che garantisce la compensazione interna della temperatura della giunzione fredda e fornisce in uscita una tensione proporzionale alla temperatura secondo la relazione:
     \begin{equation}\label{thermocouple_relation_AD595}
         V_{out} = T \cdot 10 \frac{mV}{\degree C}
     \end{equation}
-    Nella sezione \ref{conditioning} si tratterà più approfonditamente il condizionamento di questo segnale per sfruttare l'intero range dell'ADC del microcontrollore.
+    Nella sezione \ref{conditioning} si tratterà più approfonditamente l'eventuale condizionamento di questo segnale per sfruttare l'intero range dell'ADC del microcontrollore.
     
     
     \subsection{Sensore ottico}\label{optical_sensor}
-    Il sensore principale di questo sistema di controllo è l'ADNS-2610, che viene utilizzato dal microcontrollore per calcolare l'azimuth e l'elevazione relativi del sole.\\
+    Il sensore principale di questo sistema di controllo è l'ADNS-2610, che viene utilizzato dal microcontrollore per calcolare l'azimut e l'elevazione relativi del sole.\\
     
     \begin{figure}[h]
         \centering
@@ -224,7 +225,7 @@ L'alimentazione del sistema può esse fornita da un pannello solare per rendere 
    
    
     Questo integrato nasce come sensore per mouse ottici, che dispongono di una fotocamera a bassa risoluzione e confrontano le immagini di due frame successivi per individuare lo spostamento relativo alla superficie sottostante, nella porzione di sinistra della figura \ref{fig:ADNS2610_die} si osserva la matrice 18x18 degli elementi fotosensibili (l'immagine è stata realizzata con un ingrandimento e l'area effettiva coperta dalla griglia è di circa 2 $mm^2$).\\
-    Il principio di funzionamento è identico ad una camera a foro di spillo, in cui l'immgine viene proiettata sullo schermo fotosensibile attraverso un foro circolare di piccole dimensioni.
+    Il principio di funzionamento è identico ad una camera a foro di spillo, in cui l'immagine viene proiettata sullo schermo fotosensibile attraverso un foro circolare di piccole dimensioni.
     
     \begin{figure}[h]
         \centering
@@ -259,9 +260,9 @@ L'alimentazione del sistema può esse fornita da un pannello solare per rendere 
     Considerata l'uscita del AD595 descritta dall'equazione (\ref{thermocouple_relation_AD595}) nella sezione \ref{thermocouple} e considerata la risoluzione di 12 bit degli ADC del microcontrollore, si ottiene una minima variazione apprezzabile (idealmente) inferiore a 0.12 °C. Per questo motivo non è necessario realizzare un secondo condizionamento del segnale, in quanto tale valore di incertezza è trascurabile rispetto alle temperature da misurare e alle altre fonti di errore presenti; per maggiore completezza si riporta comunque un possibile condizionamento di tale segnale. \\
     
     \vspace{0.2cm}
-    
-    \noindent
-    Si limiti il range di interesse da 15°C a 300°C in cui rientra la regolare temperatura di un forno solare. Secondo la relazione (\ref{thermocouple_relation_AD595}) l'uscita in tensione del sensore varierà all'interno dell'intervallo [150mV; 3.0V], mentre l'ADC integrato nel microcontrollore, con $V_{ref}$ standard, ammette ingressi nel range [0V; 3.3V]; di seguito si suppongono tutti i dispositivi impiegati come ideali. È possibile applicare un offset e successivamente un'amplificazione opportunamente calcolati di seguito.
+
+
+    Si limiti il range di interesse da 15°C a 300°C in cui rientra la regolare tem\-pe\-ra\-tu\-ra di un forno solare. Secondo la relazione (\ref{thermocouple_relation_AD595}) l'uscita in tensione del sensore varierà all'interno dell'intervallo [150mV; 3.0V], mentre l'ADC integrato nel microcontrollore, con $V_{ref}$ standard, ammette ingressi nel range [0V; 3.3V]; di seguito si suppongono tutti i dispositivi impiegati come ideali. È possibile applicare un offset e successivamente un'amplificazione opportunamente calcolati di seguito.
         \begin{equation}\label{offset}
             {V_{offset}} = V_{Smin} - V_{ADCmin} = 150 mV
         \end{equation}
@@ -271,7 +272,7 @@ L'alimentazione del sistema può esse fornita da un pannello solare per rendere 
         \end{equation}
         Tali valori possono essere ottenuti utilizzando un amplificatore operazionale in configurazione differenziale come segue.
 
-        \noindent
+
         \begin{center}
             \includegraphics[
                 page=1,
@@ -279,8 +280,8 @@ L'alimentazione del sistema può esse fornita da un pannello solare per rendere 
                 keepaspectratio
             ]{Draws/Schematic_Elaborato_2021-05-15_differential.pdf}
         \end{center}
-                
-        \noindent
+
+
         In cui il potenziometro (o trimmer) $RP_1$ deve essere opportunamente regolato in fase di calibrazione per ottenere l'offset corretto.\\
         Essendo $R_1=R_2$ e $R_3=R_4$ l'amplificazione risulta $A = \frac{R_3}{R_1} \simeq 1.16$, stesso valore ottenuto sostituendo i rispettivi valori numerici nell'equazione (\ref{amplification}). Riguardo alle due resistenze da $57.8 k\Omega$, tale può essere ottenuto dalla serie di una resistenza da $56 k\Omega$ e da $1.8 k\Omega$, entrambi valori appartenenti alla serie E12.\\
         Combinando le equazioni (\ref{thermocouple_relation_AD595}), (\ref{offset}) e (\ref{amplification}), la funzione di trasferimento dell'amplificatore differenziale e considerata la conversione dell'ADC a 12 bit dell'ESP-32 (valore da 0 a 4095), si ottiene:
@@ -301,7 +302,7 @@ L'alimentazione del sistema può esse fornita da un pannello solare per rendere 
 \newpage
 \section{Cenni matematici}
     \subsection{Sistema coordinate cartesiane - polari}
-    Si ricorda che è possibile definire in modo univoco un punto A sul piano cartesiano mediante le sue coordinate $(x_A, y_A)$. Lo stesso punto A può anche essere descritto univocamente dalla distanza $r$ dal centro e dall'angolo $\alpha$ che esso forma con il centro e il semiasse positivo delle ascisse. È possibile ottenere la rapprentazione cartesiana dalle coordinate polari e viceversa secondo le relazioni:
+    Si ricorda che è possibile definire in modo univoco un punto A sul piano cartesiano mediante le sue coordinate $(x_A, y_A)$. Lo stesso punto A può anche essere descritto univocamente dalla distanza $r$ dal centro e dall'angolo $\alpha$ che esso forma con il centro e il semiasse positivo delle ascisse. È possibile ottenere la rappresentazione cartesiana dalle coordinate polari e viceversa secondo le relazioni:
     
     \begin{equation}
         \begin{split}
@@ -323,11 +324,11 @@ L'alimentazione del sistema può esse fornita da un pannello solare per rendere 
         \caption{Rappresentazione coordinate polari su piano cartesiano, geogebra}
     \end{figure}
     
-    In particolare, una volta determinata la posizione del centro del sole nell'immagine acquisita, ed espresso tale punto in coordinate polari $(r, \alpha)$, $r$ è direttamente legato all'elevazione effettiva del sole secondo la relazione (\ref{pinhole_angle_relation}), mentre $\alpha$ indica la diffetenza tra l'azimuth del sole e la posizione attuale della base girevole. Si osserva, infatti, che le due quantità possono essere trattate indipendentemente, in quanto ruotando la base varierà $\alpha$, mentre $r$ sarà, idealmente, costante (il centro si muove lungo una circonferenza di raggio $r$); viceversa, una variazione della sola elevazione non varia il valore di $\alpha$ (il punto si muove su uno stesso raggio della circonferenza originale).
+    In particolare, una volta determinata la posizione del centro del sole nell'immagine acquisita, ed espresso tale punto in coordinate polari $(r, \alpha)$, $r$ è direttamente legato all'elevazione effettiva del sole secondo la relazione (\ref{pinhole_angle_relation}), mentre $\alpha$ indica la differenza tra l'azimut del sole e la posizione attuale della base girevole. Si osserva, infatti, che le due quantità possono essere trattate indipendentemente, in quanto ruotando la base varierà $\alpha$, mentre $r$ sarà, idealmente, costante (il centro si muove lungo una circonferenza di raggio $r$); viceversa, una variazione della sola elevazione non varia il valore di $\alpha$ (il punto si muove su uno stesso raggio della circonferenza originale).
     
     
     \subsection{Relazioni trigonometriche}
-    Per ottimizzare la potenza assorbita dal forno si vuole che la totalità della luce che investe gli specchi venga riflessa all'interno del forno, attraverso il vetro trasparente posto sulla faccia sueriore della scatola. La situazione può essere schematizzata come mostrato nella figura \ref{sun_reflection}.
+    Per ottimizzare la potenza assorbita dal forno si vuole che la totalità della luce che investe gli specchi venga riflessa all'interno del forno, attraverso il vetro trasparente posto sulla faccia superiore della scatola. La situazione può essere schematizzata come mostrato nella figura \ref{sun_reflection}.
 
     \begin{figure}[h]
     \centering
@@ -379,7 +380,7 @@ L'alimentazione del sistema può esse fornita da un pannello solare per rendere 
     
     \vspace{1.5cm}
     
-    Infine, nota tale distanza, è possibile calcolare la rotazione del motore per portarlo alla posizione voluta, ma è necessario conoscere anche la posizione attuale assoluta dello specchio, per questo motivo è necessario un finecorsa che all'accensione permetta al controllore di avere un riferimento assoluto (analoga alla procedura di homing per le macchine a controllo numerico).
+    Infine, nota tale distanza, è possibile calcolare la rotazione del motore per portarlo alla posizione voluta, ma è necessario conoscere anche la posizione attuale assoluta dello specchio, per questo motivo è necessario un finecorsa che all'accensione permetta al microcontrollore di avere un riferimento assoluto (analoga alla procedura di homing per le macchine a controllo numerico).
 
 
 \newpage
@@ -398,9 +399,9 @@ L'alimentazione del sistema può esse fornita da un pannello solare per rendere 
         
     \subsection{Analisi funzioni principali}
         \subsubsection{Controllo accelerazione motori}
-        Il driver A4988 permette il controllo della rotazione dei motori mediante un segnale di direzione e uno di step: ogni fronte di salita del segnale di step comporta un incremento della posizione del motore nella direzione selezionata dal segnale di direzione, tale incremento dipende, oltre che dalle caratteristiche strutturali del motore in questione, dal rapporto di micro-stepping.\\
-        La rotazione è quindi composta da brevi scatti successivi, maggiore è il numero di microstep per step e maggiore sarà la fluidità del movimento.\\
-        Un semplice controllo ON-OFF, con accesione dei motori direttamente ad una velocità definita e costante, provoca elevate accelerazioni che portano ad una maggiore usura dei componenti meccanici, oltre che possibili oscillazioni attorno alla posizione desiderata, per questo motivo risulta opportuno variare la velocità grazualmente per ottenere accelerazioni e decelerazioni costanti.\\
+        Il driver A4988 permette il controllo della rotazione dei motori mediante un se\-gna\-le di direzione e uno di step: ogni fronte di salita del se\-gna\-le di step comporta un incremento della posizione del motore nella direzione selezionata dal segnale di direzione, tale incremento dipende, oltre che dalle caratteristiche strutturali del motore in questione, dal rapporto di micro-stepping.\\
+        La rotazione è quindi composta da brevi scatti successivi, maggiore è il numero di micro-step per step e maggiore sarà la fluidità del movimento.\\
+        Un semplice controllo ON-OFF, con accensione dei motori direttamente ad una velocità definita e costante, provoca elevate accelerazioni che portano ad una maggiore usura dei componenti meccanici, oltre che possibili oscillazioni attorno alla posizione desiderata, per questo motivo risulta opportuno variare la velocità gra\-dual\-men\-te per ottenere accelerazioni e decelerazioni costanti.\\
         
         \begin{figure}[h]
         \centering
@@ -428,7 +429,7 @@ L'alimentazione del sistema può esse fornita da un pannello solare per rendere 
         
         \begin{changemargin}{-2cm}{-2cm}
         \begin{lstlisting}[label={list:motor_speed_control}, style=Arduino, caption=Controllo velocità motori, basicstyle=\scriptsize]
-long move_stepper (long n_steps, float speed, float acceleration, int dir_pin, int step_pin, int enable_pin, int endstop) {    // speed in steps/s, acceleration in steps/s^2
+long move_stepper (long n_steps, float speed, float acceleration, int dir_pin, int step_pin, int enable_pin, int endstop) {      // speed in steps/s, acceleration in steps/s^2
   if (n_steps < 0) {
     digitalWrite(dir_pin, HIGH);
   } else {
@@ -437,6 +438,7 @@ long move_stepper (long n_steps, float speed, float acceleration, int dir_pin, i
 
   unsigned long t_offset = micros();
   unsigned long t;
+  long microsteps;
   unsigned long acceleration_limit_steps = 0.5 * speed * speed / acceleration + 0.5;
   bool acceleration_phase = true;
   bool constant_phase = false;
@@ -449,7 +451,7 @@ long move_stepper (long n_steps, float speed, float acceleration, int dir_pin, i
   }
 
   digitalWrite(enable_pin, LOW);
-  for (long microsteps = 0; microsteps < abs(n_steps)*MICROSTEPPING_RATIO; microsteps++){
+  for (microsteps = 0; microsteps < abs(n_steps)*MICROSTEPPING_RATIO; microsteps++){
     do {
       t = micros();
       if (constant_phase) {
@@ -468,9 +470,9 @@ long move_stepper (long n_steps, float speed, float acceleration, int dir_pin, i
     
     if (!digitalRead(endstop)) {
       digitalWrite(step_pin, HIGH);
-      delayMicroseconds(2);      // Pulse must be at least 1us (from A4988 datasheet)
+      delayMicroseconds(2);      // Impulso di almeno 1us (da datasheet)
       digitalWrite(step_pin, LOW);
-      delayMicroseconds(1);      // Pulse must be at least 1us (from A4988 datasheet)
+      delayMicroseconds(1);      // Impulso di almeno 1us (da datasheet)
       if (constant_phase) {
         if (microsteps / MICROSTEPPING_RATIO >= abs(n_steps) - acceleration_limit_steps) {
           constant_phase = false;
@@ -494,6 +496,7 @@ long move_stepper (long n_steps, float speed, float acceleration, int dir_pin, i
   if (disable_motor) {
     digitalWrite(enable_pin, HIGH);
   }
+  return microsteps;
 }       \end{lstlisting}
         \end{changemargin}
         
@@ -529,7 +532,7 @@ while (i < 18 * 18) {
 
 
 void write(uint8_t register_addr, uint8_t data) {
-  register_addr |= 0b10000000;                  // Set MSB to 1
+  register_addr |= 0b10000000;                  // Set MSB a 1
   write_byte(register_addr);
   delayMicroseconds(200);
   write_byte(data);
@@ -537,18 +540,18 @@ void write(uint8_t register_addr, uint8_t data) {
 }
 
 uint8_t read(uint8_t register_addr) {
-  register_addr &= 0b01111111;                  // Set MSB to 0
+  register_addr &= 0b01111111;                  // Set MSB a 0
   write_byte(register_addr);
-  pinMode(SDIO, INPUT);                         // High-Z mode
-  delayMicroseconds(100);                       // T_hold >= 100us from specifications
+  pinMode(SDIO, INPUT);                         // High-Z
+  delayMicroseconds(100);                       // T_hold >= 100us da specifiche
 
   uint8_t read_data = 0;
   for (int8_t i = 7; i >= 0; i--) {
-    digitalWrite(SCK, LOW);                     // Start clock signal
-    delayMicroseconds(50);                      // Same as mouse application
-    digitalWrite(SCK, HIGH);                    // Data must be read on transition from 0 to 1
-    read_data += digitalRead(SDIO) << i;        // Data line must be read here
-    delayMicroseconds(50);                      // Same as mouse application
+    digitalWrite(SCK, LOW);                     // Impulso di clock
+    delayMicroseconds(50);                      // Tempistiche fornite da datasheet
+    digitalWrite(SCK, HIGH);
+    read_data += digitalRead(SDIO) << i;        // SDIO viene letto dopo dopo il fronte di salita
+    delayMicroseconds(50);                      // Tempistiche fornite da datasheet
   }
   return read_data;
 }
@@ -558,11 +561,11 @@ void write_byte (uint8_t byte_val) {
   pinMode(SDIO, OUTPUT);
 
   for (int8_t i = 7; i >= 0; i--) {
-    digitalWrite(SCK, LOW);                     // Start clock signal
-    digitalWrite(SDIO, byte_val & (1 << i));    // Data line must be set here
-    delayMicroseconds(50);                      // Same as mouse application
-    digitalWrite(SCK, HIGH);                    // A2610 latchs data on transition from 0 to 1
-    delayMicroseconds(50);                      // Same as mouse application
+    digitalWrite(SCK, LOW);                     // Impulso di clock
+    digitalWrite(SDIO, byte_val & (1 << i));    // SDIO deve essere impostata prima del fronte di salita
+    delayMicroseconds(50);                      // Tempistiche fornite da datasheet
+    digitalWrite(SCK, HIGH);                    // A2610 latch SDIO sul fronte di salita
+    delayMicroseconds(50);                      // Tempistiche fornite da datasheet
   }
 }       \end{lstlisting}
         \end{changemargin}
@@ -588,7 +591,7 @@ void write_byte (uint8_t byte_val) {
             \caption{Disposizione pixel}
         \end{figure}
         
-        L'implementazione \footnote{Come del codice \ref{list:protocol_implementation} la variabile globale "matrix" rappresenta i pixel dell'immagine acquisita, mentre "gradient\_modules" conterrà il risultato del'operazione} di questa operazione è molto semplice, in quanto consiste solamente nel ciclare tra gli indici della matrice e applicare la formula (\ref{edge_detection_equation}).
+        L'implementazione \footnote{Come del codice \ref{list:protocol_implementation} la variabile globale "matrix" rappresenta i pixel dell'immagine acquisita, mentre "gradient\_modules" conterrà il risultato dell'operazione} di questa operazione è molto semplice, in quanto consiste solamente nel ciclare tra gli indici della matrice e applicare la formula (\ref{edge_detection_equation}).
         \begin{changemargin}{-2cm}{-2cm}
         \begin{lstlisting}[label={list:edge_detection_code}, style=Arduino, caption=Calcolo matrice edge-detection, basicstyle=\scriptsize]
 void calculate_gradient_matrix () {
@@ -612,8 +615,8 @@ void calculate_gradient_matrix () {
         
         
         \subsubsection{Discesa del gradiente}\label{gradient_descent}
-        Per ottenere il centro dell'immagine del sole, che approssimiamo ad un cerchio, è sufficiente trovare la circonferenza che meglio approssima il contorno esterno del cerchio, definito dai punti in cui si ha una differenza più netta tra pixels successivi. \\
-        A tal fine si deve minimizzare la distanza geometrica tra la circonferenza e i punti con magiore modulo del vettore trattato nella sezione \ref{edge_detection}; tale distanza è schematizzata nella seguente figura con il tratto $ e $.
+        Per ottenere il centro dell'immagine del sole, che approssimiamo ad un cerchio, è sufficiente trovare la circonferenza che meglio approssima il contorno esterno del cerchio, definito dai punti in cui si ha una differenza più netta tra pixel successivi. \\
+        A tal fine si deve minimizzare la distanza geometrica tra la circonferenza e i punti con maggiore modulo del vettore trattato nella sezione \ref{edge_detection}; tale distanza è schematizzata nella seguente figura con il tratto $ e $.
 
         \begin{figure}[h]
         \centering
@@ -622,7 +625,7 @@ void calculate_gradient_matrix () {
         \end{figure}
         
         
-        Applicando il teorema di pitagora, per differenza, si ottiene che la distanza $ e $ è definita in funzione delle coordinate del centro e del punto in questione, secondo la relazione
+        Applicando il teorema di Pitagora, per differenza, si ottiene che la distanza $ e $ è definita in funzione delle coordinate del centro e del punto in questione, secondo la relazione
         \begin{equation}
              e = \left| \sqrt{(x_p-x)^2 + (y_p-y)^2} -r \right|
         \end{equation}
@@ -716,7 +719,7 @@ void calculate_gradient_matrix () {
             \label{double_min}
         \end{figure}
         
-        Il minimo locale e il minimo assoluto corrispondono rispettivemente alla circonferenza mostrata nell'immagine di destra e di sinistra.\\
+        Il minimo locale e il minimo assoluto corrispondono rispettivamente alla circonferenza mostrata nell'immagine di destra e di sinistra.\\
 
         \newpage
         Un possibile esempio di implementazione è il seguente\footnote{Come per le porzioni di codice precedenti, esso fa riferimento a costanti e variabili globali non riportate in questo documento.}.
@@ -764,13 +767,16 @@ void gradient_descent (float x, float y, float r, uint16_t iterations) {
         \label{accuracy_test}
     \end{figure}
      
-    Inoltre la prova è stata effettuata utilizzando il foro normalmente in dotazione con il sensore, che limita l'angolo di campo a circa 40° (mantenendo risultati accettabili), tuttavia di può ovviare a questo problema come discusso nella sezione \ref{optical_sensor} oppure con l'aggiunta di un sistema ottico di lenti ed eventualemente utilizzando un sensore con una maggiore risoluzione.
+    Inoltre la prova è stata effettuata utilizzando il foro normalmente in dotazione con il sensore, che limita l'angolo di campo a circa 40° (mantenendo risultati accettabili), tuttavia di può ovviare a questo problema come discusso nella sezione \ref{optical_sensor} oppure con l'aggiunta di un sistema ottico di lenti ed eventualmente utilizzando un sensore con una maggiore risoluzione.
     
     \vspace{1cm}
     L'algoritmo per minimizzare il valore della funzione, trattato nella sezione \ref{gradient_descent}, è tipicamente utilizzato in algoritmi di intelligenza artificiale, in particolare machine learning, per la sua flessibilità, infatti la funzione da minimizzare può rappresentare diverse grandezze a seconda della situazione in esame e i parametri possono essere perfezionati all'aumentare dei campioni disponibili, senza dover modificare l'algoritmo in sé.
     
     \newpage
-    La relizzazione pratica e concreta di questo progetto richiede diversi processi e apparecchiature. In particolare la produzione dei circuiti stampati per un'installazione stabile e professionale richiede l'utilizzo di macchine a controllo numerico, come ad esempio fresatrice CNC, per la creazione di vie, fori e piste; inoltre per la rimozione del rame in eccesso dalla lastra ramata, durante la fase di creazione delle piste, vengono usate sostanze chimiche particolarmente corrosive e tossiche se ingerite, come il cloruro ferrico. Quindi il tema della sicurezza e l'utilizzo degli appositi DPI (Dispositivi di Protezione Individuale) sono elementi essenziali per la tutela dei lavoratori che operano nella produzione di questi prodotti. Inoltre, anche il dispositivo durante il funzionamento avrà dei rischi dovuti alle alte temperature che si possono raggiungere al suo interno (rischio di ustioni) e alle parti meccaniche in movimento (rischio di schiacciamento).
+    In questo progetto si è scelto di utilizzare il driver A4988 che non fornisce un feedback diretto al microcontrollore, ma possibili sviluppi possono comprendere dei driver più complessi e sofisticati, come ad esempio il modulo TMC2130 o TMC2208, che comunicano con il microcontrollore in protocollo SPI dati riguardanti i consumi del motore e lo stato di funzionamento generale del dispositivo. Con queste tipologie di driver possono essere implementati controlli dei movimenti con accurati segnali di feedback, che permettono di rilevare ostacoli che bloccano la rotazione (in quanto aumentando la coppia del motore aumenta la corrente assorbita) e quindi non richiedono l'impiego dei finecorsa.
+    
+    \vspace{1cm}
+    La realizzazione pratica e concreta di questo progetto richiede diversi processi e apparecchiature. In particolare la produzione dei circuiti stampati per un'installazione stabile e professionale richiede l'utilizzo di macchine a controllo numerico, come ad esempio fresatrice CNC, per la creazione di vie, fori e piste; inoltre per la rimozione del rame in eccesso dalla lastra ramata, durante la fase di creazione delle piste, vengono usate sostanze chimiche particolarmente corrosive e tossiche se ingerite, come il cloruro ferrico. Quindi il tema della sicurezza e l'utilizzo degli appositi DPI (Dispositivi di Protezione Individuale) sono elementi essenziali per la tutela dei lavoratori che operano nella produzione di questi prodotti. Inoltre, anche il dispositivo stesso, durante il funzionamento,comporterà dei rischi dovuti alle alte temperature che si possono raggiungere al suo interno (rischio di ustioni) e alle parti meccaniche in movimento (rischio di schiacciamento).
     
     \vfill
     \let\thefootnote\relax\footnotetext{
